# hermes-automations

./: .gitignore  GETTING_STARTED.md  README.md  pyproject.toml  setup.sh  teardown.sh
automations/: README.md
automations/gmail-labeler/: AUTOMATION.md  README.md
automations/gmail-labeler/scripts/: classifier.py  gmail_client.py  log_store.py  main.py  ocr_pipeline.py  report_unlabeled_emails.py  setup_auth.py
automations/hermes-journal/: AUTOMATION.md  README.md
automations/log-cleaner/: AUTOMATION.md  README.md  config.example.json
automations/log-cleaner/scripts/: clean_logs.py
automations/obsidian-intake/: AUTOMATION.md
automations/obsidian-intake/scripts/: fm_utils.py  note_writer.py  run.py  scanner.py  summarizer.py
automations/reddit-portfolio/: AUTOMATION.md  setup.py
automations/reddit-portfolio/scripts/: cron_daily_report.py  cron_scan.py  daily_report.py  llm_trader.py  price_fetcher.py  reddit_portfolio_scan.py  reddit_scanner.py  report_generator.py  run_cycle.py  trade_engine.py  upload_report.py
automations/server-update-monitor/: AUTOMATION.md  test-checklist.sh
automations/server-update-monitor/scripts/: monitor.sh  update_summary.sh
automations/stock-monitor/: AUTOMATION.md
automations/stock-monitor/scripts/: stock_monitor.py  stock_report.py
lib/: pushover.py
skills/llm-wiki/: README.md  SKILL.md
skills/llm-wiki/ops/: ingest.md  init.md  lint.md  query.md
skills/llm-wiki/scripts/: wiki-ingest-prep.py  wiki-init.py  wiki-lint.py  wiki-nav-update.py  wiki-orient.py  wiki-route.py
(+3 files in other folders)
